[project]
name = "task_scheduler"
version = "0.1.0"
description = "Task scheduler built in Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-cloud-storage==1.29.0",
    "gcsfs",
    "polars>=1.20.0",
    "requests==2.31.0",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]